.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Employee_Request__c/fields/Candidate_Availability__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Availability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Candidate Availability that this Employee Request relates to</description>
    <label>Candidate Availability</label>
    <referenceTo>TR1__Candidate_Availability__c</referenceTo>
    <relationshipLabel>Employee Requests</relationshipLabel>
    <relationshipName>Employee_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>