.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Employee_Request__c/fields/Created_from_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from Schedule</label>
    <type>Checkbox</type>
</CustomField>