.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Employee_Request__c/fields/End_Before_Start__c.field-meta.xml
<CustomField>
    <fullName>End_Before_Start__c</fullName>
    <formula>AND(
  NOT(ISBLANK(sirenum__Start_Time__c)),
  NOT(ISBLANK(sirenum__End_Time__c)),
  sirenum__End_Time__c &lt; sirenum__Start_Time__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Before Start</label>
    <type>Checkbox</type>
</CustomField>