.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Employee_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sirenum__Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>End_Before_Start__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>